syntax = "proto3";

option csharp_namespace = "UserInformation";

package user;

service UserInfo {
    rpc GetUserInfo (UserInfoRequest) returns (UserInfoResponse);
}   

message UserInfoRequest {
    string userId = 1;
}

message UserInfoResponse {
    string userName = 1;
    string email = 2;
}